<?xml version="1.0"?>
<package format="2">
  <name>command_level_rtc</name>
  <version>0.0.0</version>
  <description>The command_level_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
</package>
